--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "jquery": "^3.2.1",
     "webpack": "^3.5.6",
     "webpack-dev-server": "^2.8.2"
+  },
+  "dependencies": {
+    "vconsole": "^2.5.2"
   }
 }
