--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "前端简历",
+  "name": "front-cv",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "start": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
